# dbt-custom-materialization-guide

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yaml
macros/materializations/: noop.sql  table_function.sql
macros/misc/: append_created_at.sql
models/: call_explain.sql  draw_cards.sql  hands_of_players.sql  noop.sql
