[project]
name = "dbt-custom-materialization-guide"
version = "0.1.0"
description = ""
authors = [
    {name = "mashiike",email = "m.ikeda0901@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core (>=1.9.3,<1.10.0)",
    "dbt-postgres (>=1.9.0,<1.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
